[package]
name = "rust-grpc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.31.0", features = ["full"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
